Changed font to Roboto, added content in Issues page

--- a/issues/index.html
+++ b/issues/index.html
@@ -14,19 +14,25 @@ subtitle: The current conditions for bikes in Kew East, Deepdene and Balwyn
 						<section class="spotlight">
 							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
 								<h2>Safety</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<p>From 2011 to 2017, 34 cyclists were injured in crashes throughout East Kew, Deepdene and Balwyn. Eight of these were classified as ‘serious’.</p>
+								<p>At present, there is no separated on-road infrastructure in East Kew, Deepdene or Balwyn. This is a major barrier to encouraging commuter and utility cycling.</p>
+								<p>The existing disjointed off-road paths are separated by busy four-lane 60km/h roads and have few crossing points. This strongly discourages school and recreational cycling</p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
 								<h2>Connectivity</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<p>The existing Glass Creek Trail is disjointed and does not connect well to the wider network of bicycle infrastructure.</p>
+								<p>The current path terminates in Hays Paddock in the north with limited signage and infrastructure to direct users onto the Koonung Creek Trail near Burke Road.</p>
+								<p>To the south, the Trail comes to an abrupt end in Stradbroke Park at the intersection of Burke and Belmore Roads.</p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
 								<h2>Infrastructure</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<p>Wayfinding along the route is non-existent.</p>
+								<p>While much infrastructure is already in place, small connections between the isolated segments is required.</p>
+								<p>Both on and off-road paths require infrastructure to encourage cycling.</p>
 							</div>
 						</section>
 					</section>
