--- a/issues/index.html
+++ b/issues/index.html
@@ -12,7 +12,7 @@ subtitle: The current conditions for bikes in Kew East, Deepdene and Balwyn
 				<!-- Issues -->
 					<section id="one" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="./images/pic01.jpg" alt="" /></div><div class="content">
 								<h2>Safety</h2>
 								<p>From 2011 to 2017, 34 cyclists were injured in crashes throughout East Kew, Deepdene and Balwyn. Eight of these were classified as ‘serious’.</p>
 								<p>At present, there is no separated on-road infrastructure in East Kew, Deepdene or Balwyn. This is a major barrier to encouraging commuter and utility cycling.</p>
