Removed unused social features, fixed bottom index page button text

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ layout: landing
 								<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
 							</header>
 							<ul class="actions vertical">
-								<li><a href="/content/REPORTLINK" class="button fit special">Download full report</a></li>
+								<li><a href="/content/REPORTLINK" class="button fit special">Full report</a></li>
 								<li><a href="/issues" class="button fit">Learn More</a></li>
 							</ul>
 						</div>
